--- a/style.css
+++ b/style.css
@@ -5,10 +5,11 @@ body{
 h1{
     font-size: 50px;
 }
+
 .name-color{
     color:rgb(230, 156, 20)
 }
-section{
+.flexible-container{
     display: flex;
     margin-bottom: 150px;;
 }
@@ -36,4 +37,30 @@ section{
     background-position: right;
     padding-right: 200px;
     padding-left: 10px;
+}
+.experience-item{
+    width:50%;
+    box-shadow:10px 10px 40px grey;
+    border-radius: 5px;
+    margin-left:5%;
+    margin-right:5%;
+    padding-left:40px;
+}
+.experience-area{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+#stack-dev{
+    border-left: 7px solid;
+    border-image: linear-gradient(salmon, tomato);
+    border-image-slice:1;
+}
+#web-dev{
+    border-left: 7px solid;
+    border-image: linear-gradient(blue, cyan);
+    border-image-slice:1;
+}
+footer p{
+    text-align: center;
 }
